2013-08-13  Mark Wielaard  <mjw@redhat.com>

	* run-addr2line-i-test.sh: New test.
	* testfile-inlines.bz2: New testfile.
	* Makefile.am (EXTRA_DIST): Add run-addr2line-i-test.sh and
	testfile-inlines.bz2.
	(TESTS): Add run-addr2line-i-test.sh.

2013-08-12  Mark Wielaard  <mjw@redhat.com>

	* run-addr2line-test.sh: New test.
	* Makefile.am (EXTRA_DIST): Add run-addr2line-test.sh.
	(TESTS): Likewise.

2013-07-23  Jan Kratochvil  <jan.kratochvil@redhat.com>

	* run-unstrip-n.sh (test-core.*): Ignore libc.so.6 entry and order of
	the entries.

2013-07-02  Mark Wielaard  <mjw@redhat.com>

	* Makefile.am (EXTRA_DIST): Fix typo, forgot extension in
	testfilenolines.bz2.

2013-05-30  Jan Kratochvil  <jan.kratochvil@redhat.com>

	* Makefile.am (EXTRA_DIST): Add test-core-lib.so.bz2,
	test-core.core.bz2 and test-core.exec.bz2.
	* run-addrname-test.sh: New test for these files.
	* run-unstrip-n.sh: Update expected output.  New test for these files.
	* test-core-lib.so.bz2: New file.
	* test-core.core.bz2: New file.
	* test-core.exec.bz2: New file.

2013-05-03  Mark Wielaard  <mjw@redhat.com>

	* testfilenolines.bz2: New test file.
	* Makefile.am (EXTRA_DIST): Add testfilenolines.bz2.
	* run-get-lines.sh: Run testrun_compare on testfilenolines.

2013-04-30  Jan Kratochvil  <jan.kratochvil@redhat.com>

	* dwfl-report-elf-align.c: Use false add_p_vaddr for dwfl_report_elf.

2013-04-29  Mark Wielaard  <mjw@redhat.com>

	* test-subr.sh: Don't use pushd, just cd into test-dir.
	(exit_cleanup): Don't use popd, just cd .. to get out.

2013-04-27  Mark Wielaard  <mjw@redhat.com>

	* test-subr.sh (exit_cleanup): New function.
	(trap): Use exit_cleanup as argument.
	* run-native-test.sh (native_exit): New function.
	(trap): For EXIT (0) use native_exit as argument.

2013-04-27  Mark Wielaard  <mjw@redhat.com>

	* update1.c (main): Use unique tempfile name and unlink file.
	* update2.c (main): Likewise.
	* update3.c (main): Likewise.
	* update4.c (main): Use unique tempfile name.
